fix: some gridding layout issues.

--- a/src/page/sm-test/brewMixerSM2/css/style.css
+++ b/src/page/sm-test/brewMixerSM2/css/style.css
@@ -55,7 +55,6 @@ label {
   font-size: 12px;
 }
 
-input:focus,
 textarea:focus {
   color: #ffffff;
 }
